--- a/.github/workflows/ci-primer-wf.yml
+++ b/.github/workflows/ci-primer-wf.yml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
       - name: Echo
-        run: echo "Hello world"
+        run: echooooooooo "Hello world"
         shell: bash
 
       - name: Display the path
