:sparkles: Nuevo paso al workflow

--- a/.github/workflows/ci-primer-wf.yml
+++ b/.github/workflows/ci-primer-wf.yml
@@ -18,3 +18,9 @@ jobs:
                 pwd
                 cat /etc/os-release
         shell: bash
+
+      - name: Display the processor
+        run: |
+          import platform
+          print (platform.processor())
+        shell: python
